--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix::after {
+	display: block;
+	content: "";
+	clear: both;
+}
 
+.q2__content {
+	width: 900px;
+	padding: 20px;
+	margin: 0 auto;
+	background-color: #eff3f4;
+}
+
+.left {
+	margin-right: 20px;
+	margin-bottom: 10px;
+	float: left;
+}
+
+.right {
+	margin-left: 20px;
+	margin-bottom: 10px;
+	float: right;
+}
+
+.q2__content__text {
+	font-size: 18px;
+	line-height: 22px;
+	word-break: break-all;
+}
 /* 回答はここに書いてね */
