--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,5 +1,52 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q4__content {
+	padding: 20px;
+	background-color: #eff3f4;
+	text-align: center;
+	vertical-align: middle;
+}
 
+.q4__content__bar {
+	display: table;
+	width: 100%;
+}
+
+.q4__content__bar:first-child {
+	margin-bottom: 20px;
+}
+
+.element {
+	display: table-cell;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.pink {
+	background-color: #fdc8b8;
+	width: 100px;
+}
+
+.purple {
+	background-color: #e0abd9;
+}
+
+.blue {
+	background-color: #b6d8ed;
+	width: 100px;
+}
+
+.yellow {
+	background-color: #e5d32e;
+}
+
+.red {
+	background-color: #ec8f9a;
+}
+
+.green {
+	background-color: #8fdcad;
+	width: 500px;
+}
 /* 回答はここに書いてね */
