--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -1,5 +1,78 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q6__box__ta {
+	text-align: center;
+}
 
+.q6__box__ta p {
+	display: inline-block;
+	width: 90px;
+	background-color: #e6f2ff;
+	padding: 10px ;
+}
+
+.q6__box__ma {
+	width: 90px;
+	padding: 10px;
+	margin: 0 auto;
+	text-align: center;
+	background-color: #e6f2ff;
+}
+
+.q6__around__content {
+	display: table;
+}
+
+.q6__around__table {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.q6__around__table p {
+	background-color: #fff;
+	display: inline-block;
+	padding: 10px;
+}
+
+
+.q6__around__flex {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.q6__around__flex p {
+	padding: 10px;
+	background-color: #fff;
+}
+
+
+.q6__box__stable {
+	position: relative;
+}
+
+.q6__box__stable p {
+	width: 110px;
+	height: 30px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+}
+
+
+.q6__box__flexible {
+	position: relative;
+}
+
+.q6__box__flexible p {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 /* 回答はここに書いてね */
