--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -1,5 +1,99 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix::after {
+	display: block;
+	content: "";
+	clear: both;
+}
 
+.q7__text:first-child {
+	margin-left: 0;
+}
+
+.q7__text {
+	margin-left: 50px;
+	width: 225px;
+	float: left;
+	font-size: 16px;
+	box-sizing: border-box;
+}
+
+
+.q7__table  {
+	display: table;
+}
+
+.q7__table__content {
+	display: table-cell;
+}
+
+.q7__table__text:first-child {
+	margin-left: 0;
+}
+
+.q7__table__text {
+	display: inline-block;
+	box-sizing: border-box;
+	width: 225px;
+	font-size: 16px;
+	margin-left: 50px;
+	vertical-align: middle;
+}
+
+.q7__inline {
+	letter-spacing: -1em;
+	white-space: nowrap;
+}
+
+.q7__inline__text:first-child {
+	margin-left: 0;
+}
+
+.q7__inline__text {
+	display: inline-block;
+	box-sizing: border-box;
+	font-size: 16px;
+	margin-left: 50px;
+	vertical-align: middle;
+	width: 225px;
+	letter-spacing: normal;
+	white-space: normal;
+}
+
+
+.q7__flex {
+	display: flex;
+	justify-content: space-around;
+	align-items: flex-end;
+}
+
+.q7__flex__content {
+	width: 225px;
+	box-sizing: border-box;
+}
+
+
+.q7__margin__content {
+	letter-spacing: -1em;
+	white-space: nowrap;
+}
+
+.q7__fixed {
+	display: inline-block;
+	width: 300px;
+	letter-spacing: normal;
+	white-space: normal;
+	vertical-align: top;
+}
+
+.q7__variable {
+	display: inline-block;
+	width: 100%;
+	box-sizing: border-box;
+	margin-left: -300px;
+	padding-left: 350px;
+	letter-spacing: normal;
+	white-space: normal;
+}
 /* 回答はここに書いてね */
