--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -1,5 +1,41 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q9__content {
+	width: 550px;
+	position: relative;
+	margin: 0 auto;
+}
 
+.q9__content::before, .q9__content::after {
+	content: "";
+	position: absolute;
+	width: 0;
+	height: 0;
+}
+
+.q9__content::before {
+	border: 20px solid #222;
+	top: 157px;
+	left: 40px;
+	border-color: #fff transparent transparent transparent;
+}
+
+.q9__content::after {
+	border-style: solid;
+	border-width: 22px 22px 0 22px;
+	border-color: #222 transparent transparent transparent;
+	position: absolute;
+	z-index: -1;
+	top: 162px;
+	left: 38px;
+}
+
+.q9__content p {
+	font-size: 16px;
+	line-height: 16px;
+	border: 5px solid #222;
+	border-radius: 30px;
+	padding: 20px;
+}
 /* 回答はここに書いてね */
